# new-tee-os-hack

./: README.md  SETUP.md  rust-toolchain.toml
SGX/: Makefile
SGX/app/: .gitignore  Cargo.toml  build.rs
SGX/app/src/: main.rs
SGX/elfloader/: Cargo.toml
SGX/elfloader/src/: elfloader.rs  lib.rs  rsrvmalloc.rs
SGX/enclave/: .gitignore  Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
SGX/enclave/src/: lib.rs
SGX/lib/: .gitignore
SGX/linux-abi/: Cargo.toml
SGX/sgx-rt/: Cargo.toml
edge-proto/: Cargo.toml
edge-proto/src/: caller.rs  lib.rs  server.rs
edge-responder/: Cargo.toml
edge-responder/src/: edge_file.rs  error.rs  lib.rs  pcb.rs  syscall_imp.rs
edge-responder/src/fs_imp/: cwd.rs  dir.rs  file.rs  mod.rs
elf-loader/: Cargo.toml
elf-loader/src/: elf_loader.rs  lib.rs
hal/: Cargo.toml
hal/src/: lib.rs
hal/src/arch/: mod.rs
hal/src/arch/keystone/: frame.rs  mod.rs  sbi.rs  vm.rs
hal/src/arch/sgx/: frame.rs  mod.rs  vm.rs
hal/src/arch/x86_vm/: frame.rs  mod.rs  qemu.rs  security.rs  vm.rs
hal/src/edge/: caller.rs  console.rs  file.rs  mod.rs
hal/src/kernel/: mem.rs  mod.rs  vm.rs
hal/src/kernel/task/: mm.rs  mod.rs  waitqueue.rs
hal/src/sys/: mod.rs
hal/src/sys/keystone/: edge.rs  mem.rs  mod.rs  task.S  task.rs  vm.rs
hal/src/sys/keystone/rt/: edge.rs
hal/src/sys/sgx/: edge.rs  mem.rs  mod.rs  task.asm  task.rs  vm.rs
hal/src/sys/x86_vm/: edge.rs  mem.rs  mod.rs  task.asm  task.rs  vm.rs
kconfig/: Cargo.toml
kconfig/src/: keystone.rs  lib.rs  sgx.rs  x86_vm.rs
keystone-rt/: Cargo.toml
keystone-rt-runner/: Cargo.toml
keystone-rt-runner/src/: main.rs
keystone-rt/src/: entry.rs  exec.rs  frame.rs  main.rs  syscall.rs  trap.rs
keystone-rt/src/asm/: trap.S
keystone-rt/src/vm/: init.rs  page_fault.rs
kmalloc/: Cargo.toml
kmalloc/src/: lib.rs
linux-abi/: Cargo.toml
linux-abi/src/: elf.rs  errno.rs  exec.rs  lib.rs
linux-abi/src/syscall/: dir.rs  file.rs  fs.rs  listing.rs  mem.rs  mod.rs  process.rs  tables.rs
nto-builder/: Cargo.toml
riscv-sv39/: Cargo.toml
riscv-sv39/src/: lib.rs  pagetable.rs
scripts/: ci-check.sh  ks-push-rt  run-ks
sgx-libos/: Cargo.toml
sgx-libos/src/: heap.rs  klog.rs  lib.rs  panic.rs  syscall.rs  trap.rs  uart.rs
sgx-libos/src/asm/: syscall.asm
sgx-runner/: Cargo.toml  build.rs
sgx-runner/src/: lib.rs  ocall.rs
tests/riscv-hello-world/src/: main.rs
tests/sgx-hello-world/: Cargo.toml
tests/sgx-hello-world/src/: main.rs  x86-user.lds
tests/x64-hello-world/src/: main.rs
x86-vm-kernel/: Cargo.toml
x86-vm-kernel/src/: exec.rs  frame.rs  heap.rs  main.rs  memory.rs  syscall.rs  user.rs
x86-vm-kernel/src/asm/: syscall.asm
x86-vmm-qemu/: Cargo.toml
x86-vmm-qemu/src/: edge_call.rs  main.rs
