[package]
name = "hal"
version = "0.1.0"
edition = "2018"

[features]
kernel = ["spin"]
# Keystone part
keystone = []
keystone-rt = ["kernel", "keystone", "riscv", "riscv-sv39"]
# x86 VM part
x86-vm = []
x86-vm-kernel = ["kernel", "x86-vm", "lazy_static", "uart_16550", "x86_64"]
async-edge = ["async-trait"]
#default = ["x86-vm-kernel"]

[dependencies]
cfg-if = "1.0.0"
memoffset = "0.6.5"
# no-std for num_enum
num_enum = { version = "0.5.7", default-features = false }
riscv = { git = "https://github.com/rust-embedded/riscv.git", rev = "cd31989", features = [
    "inline-asm",
], optional = true }
riscv-sv39 = { path = "../riscv-sv39", optional = true }
spin = { version = "0.9.2", optional = true }
static_assertions = "1.1.0"

# x86 VM related things
async-trait = { version = "0.1.53", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"], optional = true }
uart_16550 = { version = "0.2.17", optional = true }
x86_64 = { version = "0.14.9", optional = true }
