[package]
name = "keystone-rt"
version = "0.1.0"
edition = "2018"

[dependencies]
elf-loader = { path = "../elf-loader" }
executor = { git = "https://github.com/rcore-os/executor.git", rev = "04b6b7b" }
hal = { path = "../hal", features = ["keystone-rt"] }
kmalloc = { path = "../kmalloc" }
linux-abi = { path = "../linux-abi", features = ["keystone"] }
log = "0.4.16"
# Waiting for llvm_asm fixes to be released
riscv = { git = "https://github.com/rust-embedded/riscv.git", rev = "cd31989", features = ["inline-asm"] }
spin = "0.9.2"
