[package]
name = "linux-abi"
version = "0.1.0"
edition = "2018"

[dependencies]
edge-proto = { path = "../edge-proto" }
executor = { git = "https://github.com/rcore-os/executor.git", rev = "04b6b7b", optional = true }
hal = { path = "../hal" }
log = "0.4.16"

# enable no-std in phf
[dependencies.phf]
version = "0.10.1"
default-features = false
features = ["macros"]

[features]
multitasking = ["executor"]
default = ["multitasking"]
