[package]
name = "sgx-libos"
version = "0.1.0"
authors = ["zjuliangxun <m13009809900@163.com>"]
edition = "2021"

[dependencies]
kconfig = { path = "../kconfig", features = ["sgx"] }
linked_list_allocator = "0.9.0"
spin = { version = "0.9.2", features = ["once"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
