[package]
name = "sgx-libos"
version = "0.1.0"
authors = ["zjuliangxun <m13009809900@163.com>"]
edition = "2021"

[dependencies]
elf-loader = { path = "../elf-loader" }
hal = { path = "../hal", features = ["sgx"] }
kconfig = { path = "../kconfig", features = ["sgx"] }
log = "0.4.16"
spin = { version = "0.9.2", features = ["once"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
