[package]
name = "x86-vm-kernel"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.10.12"
elf-loader = { path = "../elf-loader" }
executor = { git = "https://github.com/rcore-os/executor.git", rev = "04b6b7b" }
hal = { path = "../hal", features = ["x86-vm"] }
kmalloc = { path = "../kmalloc" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linux-abi = { path = "../linux-abi" }
log = "0.4.16"
pic8259 = "0.10.2"
spin = "0.9.2"
x86_64 = "0.14.9"

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0xFFFF_FFF0_0000_0000"
kernel-stack-address = "0xFFFF_FFFF_FFF8_0000"
