[package]
name = "x86-vmm-qemu"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.56"
async-std = { version = "1.11.0", features = ["unstable"] }
async-trait = "0.1.53"
bootloader-locator = "0.0.4"
edge-proto = { path = "../edge-proto" }
edge-responder = { path = "../edge-responder" }
env_logger = "0.9.0"
futures-lite = "1.12.0"
locate-cargo-manifest = "0.2.2"
log = "0.4.16"
postcard = { version = "0.7.3", features = ["alloc"] }
