[package]
name = "elfloader"
version = "0.1.0"
authors = ["zjuliangxun <m13009809900@163.com>"]
edition = "2018"

[dependencies]
goblin = { version = "0.4", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
libc = "0.2.95"
linked_list_allocator = { version = "0.9.0" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
