[package]
name = "sgxteeos"
version = "1.0.0"
edition = "2021"
authors = ["zjuliangxun <m13009809900@163.com>"]

[lib]
name = "sgxteeos"
crate-type = ["staticlib"]

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
elfloader = { path = "../elfloader" }
linux-abi = { path = "../linux-abi" }
sgx-cfg = { path = "../sgx-cfg" }
sgx-hal = { path = "../sgx-hal" }
sgx-rt = { path = "../sgx-rt" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
